añadido imagenes proyecto y containers de cada seccion

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,17 @@
         <p class="">hola</p>
     </section>
 
+    <section id="about-section">
+    </section>
 
+    <section id="how-to-start-section">
+    </section>
 
+    <section id="features">
+    </section>
+
+    <section id="pricing">
+    </section>
 
     <footer>
 
