--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,17 @@
 
     <main id="main-section">
         <section id="about-section" class="bg-white">
-            <div class="container border-danger border">
-               <h2>About Us</h2>
-
+            <div class="container">
+               <h2 class="text-center">About Us</h2>
+                
+               <div class="row p-2 mt-4">
+                    <div class="col-lg about-us-video d-flex align-items-center">
+                        <img src="/img/iconVideo.png" alt="" class="mx-auto ">
+                    </div>
+                    <div class="col-lg about-us-video d-flex align-items-center">
+                        <img src="/img/iconVideo.png" alt="" class="mx-auto">
+                    </div>
+                </div>
            </div> 
         </section>
     </main>
