maquetación seccion pricing

--- a/src/index.html
+++ b/src/index.html
@@ -109,13 +109,66 @@
             </div>
         </section>
 
+        <section id="pricing" class="text-white">
+            <div class="container">
+                <h2 class="text-center">Pricing</h2>
+
+                <div class="row mt-5 gap-4">
+                    <div class="col-lg d-flex flex-column align-items-start bg-secondary justify-content-between">
+                       <h3>Start</h3>
+
+                       <div class="">
+                            <ul>
+                                <li>Program for 8 workouts</li>
+                                <li>3 calls with the trainer</li>
+                                <li>Video instructions</li>
+                            </ul>
+                       </div>
+
+                       <p><span>$5</span>/month</p>
+                       <button class="btn border text-white fw-semibold">Choose</button>
+                    </div>
+                    <div class="col-lg d-flex flex-column bg-secondary align-items-start justify-content-between">
+                        <h3>Middle</h3>
+
+                        <div class="">
+                            <ul>
+                                <li>Program for 18 workouts</li>
+                                <li>5 calls with the trainer</li>
+                                <li>Video instructions</li>
+                                <li>Text instructions</li>
+                                <li>1 technique analysis</li>
+                            </ul>
+                       </div>
+
+                       <p><span>$14</span>/month</p>
+                       <button class="btn border text-white fw-semibold">Choose</button>
+                    </div>
+                    <div class="col-lg d-flex flex-column bg-secondary align-items-start justify-content-between">
+                        <h3>Pro</h3>
+
+                        <div class="">
+                            <ul>
+                                <li>Program for 40 workouts</li>
+                                <li>15 calls with the trainer</li>
+                                <li>Video instructions</li>
+                                <li>Text instructions</li>
+                                <li>5 technique analysis</li>
+                                <li>Acces to chat with other sportsmen</li>
+                            </ul>
+                       </div>
+
+                       <p><span>$20</span>/month</p>
+                       <button class="btn border text-white fw-semibold">Choose</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
+
     <div class="container">
-        <section id="pricing">
-        </section>
-    
         <footer>
     
         </footer>
