maquetación del footer

--- a/src/index.html
+++ b/src/index.html
@@ -20,16 +20,16 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#about">About Us</a>
+                                <a class="nav-link text-white" href="#about-section">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#services">How To Start</a>
+                                <a class="nav-link text-white" href="#how-to-start-section">How To Start</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#team">Features</a>
+                                <a class="nav-link text-white" href="#features">Features</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#contact">Pricing</a>
+                                <a class="nav-link text-white" href="#pricing">Pricing</a>
                             </li>
                         </ul>
                     </div>
@@ -167,12 +167,15 @@
     </main>
 
 
+    <footer id="footer" class="bg-white">
+        <div class="container">
+            <div class="d-flex border justify-content-between align-items-center">
+                <span class="terms">Terms of Service</span>
+                <span class="copy">© Fitness Online, 2022</span>
+            </div>
+        </div>
+    </footer>
 
-    <div class="container">
-        <footer>
-    
-        </footer>
-    </div>
     <script type="module" src="./main.js"></script>
 </body>
 </html>
