ajustes para el responsive

--- a/src/index.html
+++ b/src/index.html
@@ -8,34 +8,34 @@
 </head>
 <body>
     <!-- header section -->
-    <header id="header-section" class="text-white py-3 ">
+    <header id="header-section" class="text-white py-3">
         <div class="container">
-            <nav class="navbar navbar-expand-lg">
-                    <a class="navbar-brand d-flex align-items-center gap-2" href="#">
-                        <img src="/img/logo.png" alt="" class="w-50">
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#about-section">About Us</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#how-to-start-section">How To Start</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#features">Features</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#pricing">Pricing</a>
-                            </li>
-                        </ul>
-                    </div>
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <a class="navbar-brand d-flex align-items-center gap-2" href="#">
+                    <img src="/img/logo.png" alt="" class="logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#about-section">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#how-to-start-section">How To Start</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#features">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#pricing">Pricing</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
-            <div class="header-text">
-                <h1 class="">Online Workout Personal Program</h1>
+            <div class="header-text d-flex flex-column gap-3">
+                <h1 class="mb-4">Online Workout Personal Program</h1>
                 <p class="fw-light">Start doing fitness online with your personal coach and become healthy</p>
                 <button class="btn btn-info text-white rounded-pill px-4">Start Training</button>
             </div>
@@ -125,7 +125,7 @@
                             </ul>
                        </div>
 
-                       <p><span>$5</span>/month</p>
+                       <p class="d-flex align-items-center"><span>$5</span>/month</p>
                        <button class="btn border text-white fw-semibold">Choose</button>
                     </div>
                     <div class="col-lg d-flex flex-column bg-secondary align-items-start justify-content-between">
@@ -141,7 +141,7 @@
                             </ul>
                        </div>
 
-                       <p><span>$14</span>/month</p>
+                       <p class="d-flex align-items-center"><span>$14</span>/month</p>
                        <button class="btn border text-white fw-semibold">Choose</button>
                     </div>
                     <div class="col-lg d-flex flex-column bg-secondary align-items-start justify-content-between">
@@ -158,7 +158,7 @@
                             </ul>
                        </div>
 
-                       <p><span>$20</span>/month</p>
+                       <p class="d-flex align-items-center"><span>$20</span>/month</p>
                        <button class="btn border text-white fw-semibold">Choose</button>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
 
     <footer id="footer" class="bg-white">
         <div class="container">
-            <div class="d-flex border justify-content-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center flex-wrap">
                 <span class="terms">Terms of Service</span>
                 <span class="copy">© Fitness Online, 2022</span>
             </div>
